# downloader-modpacks

./: .gitignore  .prettierignore  .prettierrc.json  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
src/: App copy.tsx  App.tsx  main.tsx  route-tree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs
src/components/: select-modpack.tsx
src/components/ui/: field.tsx  radio-group.tsx  select.tsx
src/data/: data.json
src/hooks/: selectDir.ts  use-config.ts  use-minecraft-dir.ts  use-select-dir.ts
src/lib/minecraft/: validator.ts
src/lib/minecraft/validation/: config-validator.ts  dir-validator.ts
src/pages/_app/: index.tsx  route.tsx
src/pages/_app/create/: index.tsx
src/pages/_app/edit/: index.tsx
src/pages/_app/update/: index.tsx
src/types/: config.ts  manifest.ts
