[package]
name = "sn-modpacks"
version = "0.1.0"
description = "Sn ModPacks helps you download and configure your modpack."
authors = ["Estanho"]
edition = "2024"

[lib]
name = "sn_modpacks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

