[package]
name = "downloader-modpacks-sn50"
version = "0.1.0"
description = "DownloaderModPacks-Sn50 helps you download and configure your modpack."
authors = ["Estanho"]
edition = "2024"

[lib]
name = "downloader_modpacks_sn50_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

